# confluence-fetch

./: AGENTS.md  README.md  confluence_fetch.py  pyproject.toml  spec.md
.github/workflows/: publish.yml
src/confluence_fetch/: __init__.py  __main__.py  cli.py  config.py  errors.py  fetcher.py  markdown.py  models.py  urls.py
tests/: test_cli.py  test_config.py  test_fetcher.py  test_smoke.py
