[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "confluence-fetch"
version = "0.12.0"
description = "Agent-first CLI for fetching Confluence Cloud page context as Markdown or JSON."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Paul" },
]
dependencies = [
  "beautifulsoup4>=4.12",
  "httpx>=0.27",
  "markdownify>=0.13",
  "tomli-w>=1.0",
]

[project.scripts]
confluence-fetch = "confluence_fetch.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/confluence_fetch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
